# boost-multiprecision-example

./: CMakeLists.txt  CMakePresets.json  ReadMe.md  vcpkg.json
examples/: CMakeLists.txt  cpp_bin_float_example.cpp  cpp_complex_example.cpp  cpp_dec_float_example.cpp  cpp_int_example.cpp  cpp_rational_example.cpp
libs/: CMakeLists.txt  args.cpp  deep-zoom.cpp
libs/include/deep-zoom/: args.h  deep-zoom.h
tests/: CMakeLists.txt  args_test.cpp  test.cpp
tools/: CMakeLists.txt  main.cpp
